--- a/.github/workflows/deploy_react.yml
+++ b/.github/workflows/deploy_react.yml
@@ -13,5 +13,5 @@ jobs:
 
     steps:
     - name: deploy react
-    - run: npx create-react-app react-application
+      run: npx create-react-app react-application
       
