--- a/.github/workflows/deploy_react.yml
+++ b/.github/workflows/deploy_react.yml
@@ -13,5 +13,7 @@ jobs:
 
     steps:
     - name: deploy react
-    - run: npx create-react-app react-application
+      run: |
+        npm run build
+        ls
       
