--- a/.github/workflows/deploy_react.yml
+++ b/.github/workflows/deploy_react.yml
@@ -12,8 +12,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-      name: deploy react
+    - name: checkout
+      uses: actions/checkout@v3
+      
+    - name: deploy react
       run: |
         ls
         cd ./react-application
