--- a/react-application/package.json
+++ b/react-application/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://martinropke.github.io/2023_l1_maua_primeiro_workflow",
   "name": "react-application",
   "version": "0.1.0",
   "private": true,
